2008-11-03: 
    Added and sucessfully tested a new plugin UserFuncs to GenX.
    This allow the user to run custom functions defined in the script.
    Fixed a bug that the program wont close when a saved model is in 
    active...
    Fixed the bug with the boolean flag when importing a table with fit
    parameters into GenX
    
===============================================================================
2008-11-03: GenX2.0b4 released
2008-11-02:
    Tested and corrected bugs for the commands on the extra data. This is
    now fully implemented and working.
    Fixed plotting of FOM and Pars. Autoscale flag had no effect on the
    updating. Fixed and tested.
    Added a question if the model is not saved when exiting the program.
    Added also scaling to linear autoscaling 5%. Just makes linear plots look
    a bit nicer.
    Implemented a new parameter in the model interdiff.py, taylor_n so that 
    the number of terms in the taylor expansion can be controlled.

2008-10-30:
    Implemented additional commands for extra data. Have only tested that the
    the function remains with original data. Full testing remains to be done.
    Also fixed an error handling bug in data_loader/default.py and sls_sxrd.py
    
2008-10-28:
    Added question for save as if an existing file is overwritten.
    This was also done for export script and export table.
    Have previously fixed some serious bugs in the structurefactor part.
    And also found and corrected bugs in the table export/import function.

2008-09-14:
    Fixed bug in the printing and copying of the plots. Could only print
    or copy the first plot.
    Implemented scatttering lengths plots in the reflectivity plugin.
    
2008-09-13:
    Made modification so the user can see wheter or not any changes has been
    made since the last saving of the model. This is displayed by a little
    star after teh filename

2008-09-12:
    Fixed a bug reported by Gunnar needed resolution to have footprint